<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear_detail_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".presentation.TaskDetailActivity"
    >

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/text_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/task_title"
        style="@style/Title3"/>

    <EditText
        android:id="@+id/edt_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/add_a_title_for_your_task"
        android:autofillHints="None"
        style="@style/Body1"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/text_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/task_description"
        android:layout_marginTop="8dp"
        style="@style/Title3"
        />

    <EditText
        android:id="@+id/edt_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/add_a_description_for_your_task"
        android:autofillHints="None"
        android:inputType="text"
        />

    <Button
        android:id="@+id/button_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/ButtonPrimary"
        android:text="@string/add"
        android:layout_marginTop="16dp"/>

</LinearLayout>